fix: added top 0 to ensure loading starts from top and covers all the content

--- a/src/components/Loader/styles.module.scss
+++ b/src/components/Loader/styles.module.scss
@@ -7,6 +7,7 @@
   width: 100vw;
   height: 100vh;
   position: absolute;
+  top: 0;
   z-index: 5;
   background-color: var(--background);
 }
